<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="20dip"
    android:paddingRight="20dip"
    android:background="@drawable/safe">
    <EditText 
        android:id="@+id/bankEditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bankAccount"
        android:singleLine="true"/>
    <EditText 
        android:id="@+id/bankEditText2"
        android:inputType="textPassword"
        android:layout_below="@id/bankEditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:singleLine="true"
        android:hint="@string/password"/>
    <ImageView
        android:id="@+id/bankImage" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/hello_world"
        android:paddingRight="20dip"
        android:layout_marginBottom="40dip"
        android:layout_marginTop="60dip"/> 
     <ImageButton 
         android:id="@+id/bankSave"
         android:layout_width="40dip"
         android:layout_height="40dip"
         android:background="@drawable/begin"
         android:layout_above="@id/bankImage"
         android:scaleType="fitXY"
         android:layout_marginRight="40dip"
         android:layout_alignParentRight="true"
         android:contentDescription="@string/hello_world"/> 
</RelativeLayout>