<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="20dip"
    android:paddingRight="20dip">
    <TextView 
        android:id="@+id/forumText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip"
        android:textColorHighlight="@android:color/background_light"/>
    <EditText 
        android:id="@+id/forumEditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_below="@id/forumText"
        android:singleLine="true"/>
    <EditText 
        android:inputType="textPassword"
        android:id="@+id/forumEditText2"
        android:layout_below="@id/forumEditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:hint="@string/password"
        android:singleLine="true"/>
    
    <ImageView 
        android:id="@+id/forumImage"
        android:src="@drawable/save"
        android:layout_width="200dip"
        android:layout_height="200dip"
        android:scaleType="fitXY"
        android:layout_below="@id/forumEditText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:contentDescription="@string/hello_world"/>
    <ImageButton 
        android:id="@+id/forumSave"
        android:background="@drawable/save1_pressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/hello_world"/>
</RelativeLayout>